--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="matte_black">#ED000000</color>
+    <color name="light_black">#ED000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#5A5A5A</color>
+    <color name="light_grey">#E2E2E2</color>
 </resources>
