--- a/app/src/main/res/layout/layout_github_repo.xml
+++ b/app/src/main/res/layout/layout_github_repo.xml
@@ -68,6 +68,7 @@
             android:layout_marginEnd="@dimen/_16sdp"
             android:background="?android:selectableItemBackground"
             android:src="@drawable/ic_baseline_navigate_next_24"
+            android:onClick="@{() -> viewModel.onDetailsClick(item)}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
